@@ -24,6 +24,8 @@ on GitHub.
   This could lead to deadlocks in certain scenarios.
 * Fixed potential locking issue with `ExclusiveResource` in the
   `HierarchicalTestExecutorService`, which could lead to deadlocks in certain scenarios.
+* Fix support for disabling ANSI colors on the console when the `NO_COLOR` environment
+  variable is available.
 
 [[release-notes-5.11.1-junit-platform-deprecations-and-breaking-changes]]
 ==== Deprecations and Breaking Changes
